0030409: Data Exchange - exception during VRML file export

VrmlData_ShapeConvert::addShape() - handle case when parent node is NULL.